# harmonic-shaper

./: BITACORA.md  README.md  pyproject.toml
contracts/: shaper.contract.json  shaper.contract_id.golden
src/harmonic_shaper/: audio_engine.py  config.py  osc_receiver.py  state.py
tests/: test_generator.py  test_shaper_contract.py
